--- a/WW svivot.html
+++ b/WW svivot.html
@@ -145,7 +145,7 @@
         <br/>
         <br/>
         <br/>
-        <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fwonderwoman%2F&width=51&layout=button&action=like&size=small&show_faces=true&share=false&height=65&appId=93760511638" width="51" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+        <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fanastasiakova.github.io%2FsvivotWW%2F&width=61&layout=button_count&action=like&size=small&show_faces=true&share=false&height=21&appId=93760511638" width="61" height="21" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 </section>
 
 <section id="qrcoder" class="section">
